# vid-compress

./: .gitignore  LICENSE  README.md
assets/: install.sh  vid-compress.desktop
changelog/: v0.17.0.txt  v0.18.0.txt  v0.19.0  v0.20.0.txt  v0.21.0  v0.21.1  v0.21.2.txt
src/: bridge.js  commands.js  drag-file.js  exit.css  handler.js  index.html  init.js  lib.js  listener.js  main.css  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  core.rs  lib.rs  main.rs
src-watchdog/: Cargo.toml  README.txt
src-watchdog/src/: main.rs  watchdog.rs
