[package]
name = "vid-compress"
version = "0.15.1"
description = "Video Compressor"
authors = ["justsypth"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vid_compress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
fs_extra = "1.3.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
native-dialog = "0.7.0"
tokio = {version = "1.43.0", features = ["full"] }
tokio-macros = "2.4.0"
colored = "3.0.0"
webbrowser = "1.0.3"
